fixed mobile overlapping previous word

--- a/spellingapp/static/spellingproject/css/learningPage.scss
+++ b/spellingapp/static/spellingproject/css/learningPage.scss
@@ -636,9 +636,9 @@
     #lastTypo{
         bottom: 2.5rem;
 
-        position: absolute;
+        position: initial;
         display: flex;
-        margin-top: initial;
+        margin-top: 2rem;
         right: initial;
         flex-direction: column;
         justify-content: center;
